updated aand added handlers custom handlers and jwt decoding
