# USERS/API/generated/swagger/users/go-client-generated/model_client_service_ride_request.go
@@ -1,15 +1,0 @@
-/*
- * clients.proto
- *
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
- *
- * API version: version not set
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-package swagger
-
-type ClientServiceRideRequest struct {
-	UserId string `json:"userId,omitempty"`
-	StartLocation *ClientServiceLocation `json:"startLocation,omitempty"`
-	EndLocation *ClientServiceLocation `json:"endLocation,omitempty"`
-}
