# USERS/API/generated/swagger/users/go-server-server-generated/go/model_client_service_driver.go
@@ -1,22 +1,0 @@
-/*
- * clients.proto
- *
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
- *
- * API version: version not set
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-package swagger
-
-type ClientServiceDriver struct {
-
-	Id string `json:"id,omitempty"`
-
-	Username string `json:"username,omitempty"`
-
-	Phone string `json:"phone,omitempty"`
-
-	CarModel string `json:"carModel,omitempty"`
-
-	Location *ClientServiceLocation `json:"location,omitempty"`
-}
