# USERS/server/go/api_driver.go
@@ -1,0 +1,25 @@
+/*
+ * USERS Service API
+ *
+ * API fir managing users and ride operations
+ *
+ * API version: 2.0
+ * Contact: sergejs.dyldin@yandex.ru
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package server
+
+import (
+	"github.com/gin-gonic/gin"
+)
+
+type DriverAPI struct {
+}
+
+// Get /driver/:id
+// get info about your driver
+func (api *DriverAPI) GetDriverInfo(c *gin.Context) {
+	// Your handler implementation
+	c.JSON(200, gin.H{"status": "OK"})
+}
