# USERS/server/go/api_user.go
@@ -1,0 +1,32 @@
+/*
+ * USERS Service API
+ *
+ * API fir managing users and ride operations
+ *
+ * API version: 2.0
+ * Contact: sergejs.dyldin@yandex.ru
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package server
+
+import (
+	"github.com/gin-gonic/gin"
+)
+
+type UserAPI struct {
+}
+
+// Get /user/profile
+// Get user profile
+func (api *UserAPI) GetUserProfile(c *gin.Context) {
+	// Your handler implementation
+	c.JSON(200, gin.H{"status": "OK"})
+}
+
+// Put /user/profile
+// Update user profile
+func (api *UserAPI) UpdateUserProfile(c *gin.Context) {
+	// Your handler implementation
+	c.JSON(200, gin.H{"status": "OK"})
+}
