# USERS/server/go/model_rpc_status.go
@@ -1,0 +1,19 @@
+/*
+ * USERS Service API
+ *
+ * API fir managing users and ride operations
+ *
+ * API version: 2.0
+ * Contact: sergejs.dyldin@yandex.ru
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package server
+
+type RpcStatus struct {
+	Code int32 `json:"code,omitempty"`
+
+	Message string `json:"message,omitempty"`
+
+	Details []ProtobufAny `json:"details,omitempty"`
+}
